# strava_analytics

./: .env.example  .gitignore  00-pull_data_from_strava.ipynb  00-setup_airbyte.ipynb  01-Strava_data_pull.qmd  01-pull_strava_data.py  LOCAL_SETUP_GUIDE.md  MONITORING_GUIDE.md  README.md  check_git_safety.sh  cleanup_prefect_temp.ps1  debug_prefect_access.sh  deploy_local.py  fix_permissions.sh  hello.py  prefect.yaml  pyproject.toml  quick_test.sh  run_complete_test.sh  setup.sh  strava_athlete.csv  test connection.py  test.sh  test_with_sample_data.py  worker_venv.py
.github/workflows/: strava-daily.yml  strava-weekly.yml
data/: .gitkeep  strava_cookies.pkl  strava_session.pkl
data/flows_data/: activities_last_pull.parquet
docs/: QUICKSTART.md  REMOTE_ACCESS_GUIDE.md  learning_log.html  learning_log.qmd
notebooks/: 01-pull_data_from_strava.ipynb
scripts/: setup_prefect.py  test_flows.py
scripts/setup/: activate_env.sh  setup_prefect.py
scripts/testing/: quick_test.sh  run_complete_test.sh  test_flows.py  test_remote_setup.sh  test_with_sample_data.py
scripts/utils/: connect_prefect_ui.sh
src/: 00-initial_auth.ipynb  00-pull_data_from_strava.ipynb  01-pull_data_from_strava.ipynb  03-push_data_to_DB.ipynb  __init__.py  learning_log.MD  learning_log.html  utils.py
src/flows/: __init__.py  data_extraction.py  data_transformation.py  database_operations.py  main_pipeline.py  token_management.py
src/strava_analytics/: __init__.py  config.py  utils.py
src/tests/: test_utils.py
strava_env/: pyvenv.cfg
strava_env/Scripts/: activate  activate.bat
(+6 files in other folders)
