[project]
name = "strava-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mysql-connector-python>=9.3.0",
    "pandas>=2.3.0",
    "polars>=1.30.0",
    "prefect>=3.4.5",
    "pyarrow>=20.0.0",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "selenium>=4.33.0",
    "sqlalchemy>=2.0.41",
]

[tool.setuptools.packages.find]
where = ["src"] # Tells setuptools to look for packages here